[package]
name = "ferrumc"
version = "0.1.0"
edition = "2021"


[dependencies]
toml = "0.8.1"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
log = "0.4.20"
env_logger = "0.10.0"
lazy_static = "1.4.0"
chrono = "0.4.31"
colored = "2.0.4"
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"
byteorder = "1.4.3"
image = "0.24.7"
base64 = "0.21.4"


[dependencies.uuid]
version = "1.4.1"
features = ["v3", "v4", "v5", "serde"]