[package]
name = "ferrumc_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0" , features = ["full"] }
log = { version = "0.4.20", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
image = "0.24.7"
base64 = "0.21.4"
lazy_static = "1.4.0"
byteorder = "1.4.3"