[package]
name = "ferrumc_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "2.4.4"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.80"
fastanvil = "0.30.0"
bytes = "1.5.0"
tokio = { version = "1.32.0", features = ["full"] }
ferrumc_utils = { path = "../ferrumc_utils" }
log = "0.4.20"
byteorder = "1.4.3"
colored = "2.0.4"
uuid = { version = "1.4.1", features = ["v3", "v5"] }
base64 = "0.21.4"
image = "0.24.7"
lazy_static = "1.4.0"
ferrumc_world = { path = "../ferrumc_world" }