[package]
name = "ferrumc_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
fastnbt = "2.4.4"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.80"
serde_toml = "0.0.1"
toml = "0.8.1"
fastanvil = "0.30.0"
byteorder = "1.4.3"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
lazy_static = "1.4.0"
criterion = "0.5.1"