[package]
name = "ferrumc_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "2.4.4"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.80"
fastanvil = "0.30.0"
bytes = "1.5.0"